--- a/css/index.css
+++ b/css/index.css
@@ -66,6 +66,40 @@ p {
     line-height: 1.4;
 }
 
+.Nav-Bar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-top: 20px;
+    width: 90%;
+    margin-bottom: 50px;
+}
+
+.Nav-Bar a {
+    position: relative;
+    left: 115px;
+    text-decoration: none;
+    color: black;
+    width: 20px;
+    height: 75px;
+    align-content: center;
+    margin: 35px;
+    padding: 0;
+}
+
+.Nav-Bar img {
+    position: relative;
+    left: 75px;
+}
+
+.Img {
+    width: 100%;
+    margin-top: 15px;
+    margin-bottom: 50px;
+    margin-left: 550px;
+    margin-right: auto;
+}
+
 .container {
     width: 800px;
     margin: 0 auto;
@@ -101,10 +135,109 @@ p {
     justify-content: space-evenly;
 }
 
-.middle-content .boxes .box {
+.middle-content .boxes .box1 {
     width: 12.5%;
     height: 100px;
-    background: black;
+    background: Teal;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.middle-content .boxes .box2 {
+    width: 12.5%;
+    height: 100px;
+    background: gold;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.middle-content .boxes .box3 {
+    width: 12.5%;
+    height: 100px;
+    background: cadetblue;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.middle-content .boxes .box4 {
+    width: 12.5%;
+    height: 100px;
+    background: coral;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.middle-content .boxes .box5 {
+    width: 12.5%;
+    height: 100px;
+    background: crimson;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.middle-content .boxes .box6 {
+    width: 12.5%;
+    height: 100px;
+    background: forestgreen;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.middle-content .boxes .box7 {
+    width: 12.5%;
+    height: 100px;
+    background: darkorchid;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.middle-content .boxes .box8 {
+    width: 12.5%;
+    height: 100px;
+    background: hotpink;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.middle-content .boxes .box9 {
+    width: 12.5%;
+    height: 100px;
+    background: indigo;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.middle-content .boxes .box10 {
+    width: 12.5%;
+    height: 100px;
+    background: dodgerblue;
     margin: 20px 2.5%;
     color: white;
     display: flex;
@@ -143,4 +276,75 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+}
+
+.AboutContainer {
+    width: 40%;
+    margin-left: 575px;
+    margin-bottom: 50px;
+    border-bottom: 1px dotted black;
+    border-collapse: separate;
+    border-spacing: 0px 15px;
+}
+
+.Top {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.AboutContent {
+    width: 20%;
+    display: inline-block;
+    margin-bottom: 50px;
+    margin-left: 10px;
+    margin-top: 20px;
+    border-bottom: 1px dotted black;
+    border-collapse: separate;
+    border-spacing: 0px 20px;
+}
+
+.AboutContent h2 {
+    margin-top: 15px;
+}
+
+.bottom {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.bottom .AboutContent {
+    width: 20%;
+    display: inline-block;
+    margin-bottom: 50px;
+    margin-left: 10px;
+    margin-top: 20px;
+}
+
+.Work {
+    width: 40%;
+    margin-left: 575px;
+    margin-bottom: 50px;
+
+}
+
+button {
+    margin-bottom: 10px;
+    margin-top: 15px;
+    width: 120px;
+    height: 35px;
+    border: 2px solid black;
+    border-radius: 10px;
+    background-color: white;
+}
+
+.AboutNav {
+    width: 800px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 2%;
+    font-size: 14px;
 }
